# DSTI_DeepLearning_Project

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
cleaning_notebooks/: clean_raw_data.ipynb
modeling_notebooks/: how_to_read_clean_data.ipynb
modeling_notebooks/advanced_model/: train_deep_learning_models.ipynb
modeling_notebooks/base_model/: train_a_catboost_model.ipynb
modeling_notebooks/model_from_scratch/: train_catboost_model.ipynb
notebooks/: clean_downloaded_data.ipynb  example_of_how_to_read_raw_data.ipynb
production/: inference_on_new_data.ipynb
