[project]
name = "dsti-deeplearning-project"
version = "0.1.0"
description = ""
authors = [
    {name = "'dsti-deep-learning-2025'"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv (>=1.1.1,<2.0.0)",
    "huggingface-hub (>=0.35.1,<0.36.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "pyarrow (>=21.0.0,<22.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
